Sun Apr 12 18:40:04 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json/json.gemspec: bump version to 1.8.2.
	* ext/json/lib/json/version.rb: ditto.

Sun Apr 12 18:12:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json/json.gemspec, lib/rdoc/rdoc.gemspec: added gemspec directly.
	* defs/default_gems, tool/rbinstall.rb: removed default_gems definition.
	  it make simple installation for default gems.

Sun Apr 12 17:35:17 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json/*, test/json/*: Reverted r50231.  Because it's not
	  working with cross-compile environment.

Sun Apr 12 15:34:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (arg): fix segfault by null caused by syntax error.
	  [ruby-core:68851] [Bug #10957]

Sun Apr 12 15:11:16 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/test_case.rb: use explicitly exception class and reverted
	  to require JSON library for rubygems tests with Ruby 2.2.0 or earlier.

Sun Apr 12 15:10:18 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/wait/wait.c (io_wait_readable): simply returns that IO is
	  readable without blocking, but no longer returns EOF.

	* ext/io/wait/wait.c (io_ready_p, io_wait_readable): try polling
	  first and check FIONREAD optionally to see if EOF.
	  [ruby-core:36805] [Feature #4849]

Sun Apr 12 14:53:23 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/test_case.rb: fixed json load error for rubygems tests.

Sun Apr 12 14:13:28 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c: Document require name for ObjectSpace methods.
	  [ci skip][fix GH-860] Patch by @schneems

Sun Apr 12 13:54:05 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb: New test that open(fifo) doesn't block other
	  threads.

Sun Apr 12 13:52:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/coverage/coverage.c: Remove extension from require argument.
	  [ci skip][fix GH-870] Patch by @yui-knk
