@@ -1,3 +1,10 @@
+Mon Apr 13 21:20:20 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
+
+	* ext/openssl/lib/openssl/ssl.rb: stricter hostname verification
+	  following RFC 6125. with the patch provided by Tony Arcieri and
+	  Hiroshi Nakamura [ruby-core:61545] [Bug #9644]
+	* test/openssl/test_ssl.rb: add tests for above.
+
 Sun Apr 12 18:40:04 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* ext/json/json.gemspec: bump version to 1.8.2.
